--- a/atw_classifier/templates/a_layout.html
+++ b/atw_classifier/templates/a_layout.html
@@ -14,7 +14,7 @@
 </style>
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'style5.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'style7.css' %}">
 
 </head>
 <!-- NAVBAR
@@ -22,7 +22,6 @@
 <body>
     <div class="navbar-wrapper">
       <div class="container">
-
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
@@ -32,11 +31,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="#">Around The World Classifier</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{% url 'classification_script' %}">Classification</a></li>
+                <li><a href="{% url 'results' %}">Result Table</a></li>
+                <li><a href="{% url 'analysis' %}">Data Analysis</a></li>
                 <li><a href="{% url 'photo_list' %}">Photos</a></li>
                 <li><a href="#">Contact</a></li>
                 <li class="dropdown">
